2012-05-14  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/pthread/pthread.h (__PTHREAD_RWLOCK_INT_FLAGS_SHARED):
	New.
	(PTHREAD_RWLOCK_WRITER_NONRECURSIVE_INITIALIZER_NP): Check
	__PTHREAD_RWLOCK_INT_FLAGS_SHARED instead of __WORDSIZE.

2012-05-14  H.J. Lu  <hongjiu.lu@intel.com>

	* shlib-versions: Move x86_64-.*-linux.* entry to ...
	* sysdeps/x86_64/64/shlib-versions: Here.  New file.
	* sysdeps/x86_64/x32/shlib-versions: New file.

2012-05-14  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/bits/pthreadtypes.h: Define x32
	__SIZEOF_PTHREAD_XXX_T.
	(__pthread_internal_list): Check __x86_64__ instead of __WORDSIZE.
	(pthread_mutex_t): Likewise.
	(pthread_rwlock_t): Likewise.
	(__PTHREAD_RWLOCK_INT_FLAGS_SHARED): New.  Defined if __x86_64__
	is defined.

2012-05-11  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/x32/tls.h: New file.

2012-05-11  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/tls.h (THREAD_SETMEM): Use uint64_t on 64-bit
	integer.
	(THREAD_SETMEM_NC): Likewise.

2012-05-11  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/tls.h (THREAD_SELF): Replace movq/%q0 with
	mov/%0.

2012-05-11  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/bits/pthreadtypes.h
	(__cleanup_fct_attribute): Check __x86_64__ instead of
	__WORDSIZE.

2012-05-11  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/pthread/pthread.h (PTHREAD_MUTEX_INITIALIZER): Check
	__PTHREAD_MUTEX_HAVE_PREV instead of __WORDSIZE.
	(PTHREAD_RECURSIVE_MUTEX_INITIALIZER_NP): Likewise.
	(PTHREAD_ERRORCHECK_MUTEX_INITIALIZER_NP): Likewise.
	(PTHREAD_ADAPTIVE_MUTEX_INITIALIZER_NP): Likewise.

2012-05-11  H.J. Lu  <hongjiu.lu@intel.com>

	* pthread_create.c (start_thread): Check __PTHREAD_MUTEX_HAVE_PREV
	instead of __WORDSIZE.

2012-05-10  Thomas Schwinge  <thomas@schwinge.name>

	[BZ #3748]
	* sysdeps/pthread/bits/libc-lockP.h (__libc_once_get): New macro.

2012-05-09  Chung-Lin Tang  <cltang@codesourcery.com>
