@@ -27,7 +27,6 @@
 # include <stdlib.h>
 # include <sysdep.h>
 # include <kernel-features.h>
-# include <bits/wordsize.h>
 # include <xmmintrin.h>
 
 
@@ -60,18 +59,14 @@ typedef struct
 # else
   int __unused1;
 # endif
-# if __WORDSIZE == 64
   int rtld_must_xmm_save;
-# endif
   /* Reservation of some values for the TM ABI.  */
   void *__private_tm[5];
-# if __WORDSIZE == 64
   long int __unused2;
   /* Have space for the post-AVX register size.  */
-  __m128 rtld_savespace_sse[8][4];
+  __m128 rtld_savespace_sse[8][4] __attribute__ ((aligned (32)));
 
   void *__padding[8];
-# endif
 } tcbhead_t;
 
 #else /* __ASSEMBLER__ */
